--- a/dataverse-webapp/src/main/webapp/editMetadata.xhtml
+++ b/dataverse-webapp/src/main/webapp/editMetadata.xhtml
@@ -29,7 +29,7 @@
                                         styleClass="form-group">
 
                                 <label for="metadata_#{fieldsByType.datasetFieldType.name}" class="col-sm-3 control-label">
-                                    #{fieldsByType.datasetFieldType.localeTitle}
+                                    <h:outputText value="#{fieldsByType.datasetFieldType.localeTitle}" escape="false" />
                                     <h:outputText styleClass="glyphicon glyphicon-asterisk text-danger" value="" rendered="#{fieldsByType.datasetFieldType.requiredInDataverse }" />
                                     <span class="glyphicon glyphicon-question-sign tooltip-icon"
                                           jsf:rendered="#{not empty fieldsByType.datasetFieldType.localeDescription}" tabindex="0"
