Closes #767: Make file page with subpages wcag compliant

--- a/dataverse-webapp/src/main/webapp/search/advanced.xhtml
+++ b/dataverse-webapp/src/main/webapp/search/advanced.xhtml
@@ -48,6 +48,7 @@
                                         #{searchField.displayName}
                                         <span data-toggle="tooltip" data-placement="top" 
                                               class="glyphicon glyphicon-question-sign text-primary"
+                                              tabindex="0" role="button"
                                               data-original-title="#{searchField.description}">
                                         </span>
                                     </label>
@@ -94,6 +95,7 @@
                                             #{item.displayName}
                                             <span data-toggle="tooltip" data-placement="top" 
                                                   class="glyphicon glyphicon-question-sign text-primary"
+                                                  tabindex="0" role="button"
                                                   data-original-title="#{item.description}">
                                             </span>
                                         </label>
@@ -166,6 +168,7 @@
                                         #{fileSearchFields.displayName}
                                         <span data-toggle="tooltip" data-placement="top" 
                                                 class="glyphicon glyphicon-question-sign text-primary"
+                                                tabindex="0" role="button"
                                                 data-original-title="#{fileSearchFields.description}">
                                         </span>
                                     </label>
