Closes #828: From-To labels for range fields

--- a/dataverse-webapp/src/main/webapp/search/advanced.xhtml
+++ b/dataverse-webapp/src/main/webapp/search/advanced.xhtml
@@ -105,18 +105,23 @@
                                                          value="#{item.fieldValue}"
                                                          rendered="#{item.searchFieldType == fieldTypeEnums.TEXT}"/>
                                             <div>
+                                                <p:outputLabel for="daterangeSearchMinimum"
+                                                               value="#{bundle['advanced.search.metadata.from']} "
+                                                               style="white-space: pre"
+                                                               rendered="#{item.searchFieldType == fieldTypeEnums.DATE}"
+                                                               />
                                                 <p:inputText id="daterangeSearchMinimum" style="padding-right: 5px"
-                                                               placeholder="#{bundle['advanced.search.metadata.from']}"
                                                                value="#{item.lowerLimit}"
                                                                rendered="#{item.searchFieldType == fieldTypeEnums.DATE}"
                                                                validatorMessage="#{bundle['advanced.search.wrong.daterange.format']}">
                                                     <f:validateRegex pattern="^(\-?)[0-9]{4}((\-)([0-9]{2})){0,2}$" />
                                                 </p:inputText>
                                                 <p:outputLabel for="daterangeSearchMaximum"
-                                                               value="&#8212;"
-                                                               rendered="#{item.searchFieldType == fieldTypeEnums.DATE}"/>
+                                                               value=" #{bundle['advanced.search.metadata.to']} "
+                                                               style="white-space: pre"
+                                                               rendered="#{item.searchFieldType == fieldTypeEnums.DATE}"
+                                                />
                                                 <p:inputText id="daterangeSearchMaximum" style="padding-left: 5px"
-                                                               placeholder="#{bundle['advanced.search.metadata.to']}"
                                                                value="#{item.upperLimit}"
                                                                rendered="#{item.searchFieldType == fieldTypeEnums.DATE}"
                                                                validatorMessage="#{bundle['advanced.search.wrong.daterange.format']}">
@@ -126,15 +131,19 @@
                                                 <p:message for="daterangeSearchMaximum" display="text" />
                                             </div>
                                             <div>
+                                                <p:outputLabel for="rangeSearchMinimum"
+                                                               value="#{bundle['advanced.search.metadata.from']} "
+                                                               style="white-space: pre"
+                                                               rendered="#{item.searchFieldType == fieldTypeEnums.NUMBER}"
+                                                />
                                                 <p:inputNumber id="rangeSearchMinimum" style="padding-right: 5px"
-                                                               placeholder="#{bundle['advanced.search.metadata.from']}"
                                                                value="#{item.minimum}"
                                                                rendered="#{item.searchFieldType == fieldTypeEnums.NUMBER}"/>
                                                 <p:outputLabel for="rangeSearchMaximum"
-                                                               value="&#8212;"
-                                                               rendered="#{item.searchFieldType == fieldTypeEnums.NUMBER}"/>
+                                                               value="#{bundle['advanced.search.metadata.to']}"
+                                                               rendered="#{item.searchFieldType == fieldTypeEnums.NUMBER}"
+                                                />
                                                 <p:inputNumber id="rangeSearchMaximum" style="padding-left: 5px"
-                                                               placeholder="#{bundle['advanced.search.metadata.to']}"
                                                                value="#{item.maximum}"
                                                                rendered="#{item.searchFieldType == fieldTypeEnums.NUMBER}"/>
                                             </div>
