Closes #767: cr response

--- a/dataverse-webapp/src/main/webapp/provenance-popups-fragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/provenance-popups-fragment.xhtml
@@ -18,7 +18,7 @@
         <div class="form-horizontal">
             <p:outputPanel id="provPopupOutput" class="form-group text-left">
                 <div class="col-sm-12">
-                    <p id="someid" class="help-block">
+                    <p class="help-block">
                         <h:outputFormat value=" #{bundle['file.editProvenanceDialog.tip']}" escape="false">
                             <f:param value="#{settingsWrapper.guidesBaseUrl}"/>
                             <f:param value="#{settingsWrapper.guidesVersion}"/>
