--- a/dataverse-webapp/src/main/webapp/createDataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/createDataset.xhtml
@@ -79,6 +79,7 @@
                     <ui:include src="metadata-importers-fragment.xhtml">
                         <ui:param name="importers" value="#{CreateDatasetPage.importers}"/>
                         <ui:param name="selectedImporter" value="#{CreateDatasetPage.selectedImporter}"/>
+                        <ui:param name="pageBean" value="#{CreateDatasetPage}"/>
                     </ui:include>
                 </ui:fragment>
 
