--- a/dataverse-webapp/src/main/webapp/search/advanced.xhtml
+++ b/dataverse-webapp/src/main/webapp/search/advanced.xhtml
@@ -126,6 +126,11 @@
                                                          value="#{item.fieldValue}"
                                                          rendered="#{item.searchFieldType == fieldTypeEnums.TEXT}"/>
                                             <div>
+                                                <h:inputHidden id="dateRangeValidator" value="true" >
+                                                    <f:validator validatorId="dateRangeValidator" />
+                                                    <f:attribute name="dateFrom" value="#{dateFrom}" />
+                                                    <f:attribute name="dateTo" value="#{dateTo}" />
+                                                </h:inputHidden>
                                                 <div style="display: inline-block; " jsf:rendered="#{item.searchFieldType == fieldTypeEnums.DATE}">
                                                     <p:outputLabel for="daterangeSearchMinimum"
                                                                    value="#{bundle['advanced.search.metadata.from']} "
@@ -134,10 +139,12 @@
                                                                    />
                                                     <p:inputText id="daterangeSearchMinimum" style="padding-right: 5px"
                                                                    value="#{item.lowerLimit}"
+                                                                   binding="#{dateFrom}"
                                                                    rendered="#{item.searchFieldType == fieldTypeEnums.DATE}"
-                                                                   validatorMessage="#{bundle['advanced.search.wrong.daterange.format']}">
-                                                        <f:validateRegex pattern="^(\-?)[0-9]{4}((\-)([0-9]{2})){0,2}$" />
+                                                    >
                                                     </p:inputText>
+                                                    <p:message for="daterangeSearchMinimum" display="text" />
+                                                    <p:message for="dateRangeValidator" display="text" />
                                                 </div>
                                                 <div style="display: inline-block;" jsf:rendered="#{item.searchFieldType == fieldTypeEnums.DATE}">
                                                     <p:outputLabel for="daterangeSearchMaximum"
@@ -147,12 +154,12 @@
                                                     />
                                                     <p:inputText id="daterangeSearchMaximum" style="padding-left: 5px"
                                                                    value="#{item.upperLimit}"
+                                                                   binding="#{dateTo}"
                                                                    rendered="#{item.searchFieldType == fieldTypeEnums.DATE}"
-                                                                   validatorMessage="#{bundle['advanced.search.wrong.daterange.format']}">
-                                                        <f:validateRegex pattern="^(\-?)[0-9]{4}((\-)([0-9]{2})){0,2}$" />
+                                                    >
                                                     </p:inputText>
-                                                    <p:message for="daterangeSearchMinimum" display="text" />
                                                     <p:message for="daterangeSearchMaximum" display="text" />
+                                                    <p:message for="dateRangeValidator" display="text" />
                                                 </div>
                                             </div>
                                             <div>
